--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
     sdk: flutter
 
   shared_preferences: ^2.0.15
-  markdown_core: ^1.0.0
+  markdown:
 
 dev_dependencies:
   flutter_test:
@@ -38,11 +38,6 @@ flutter:
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
-
-  fonts:
-    - family: MyIconFont
-      fonts:
-        - asset: packages/markdown_editor_ot/fonts/iconfont.ttf
 
   # example:
   # fonts:
